--- a/Beet_Labs_Machine_Learning_01.ipynb
+++ b/Beet_Labs_Machine_Learning_01.ipynb
@@ -67,39 +67,28 @@
       "cell_type": "markdown",
       "source": [
         "<br><br>\n",
-        "<img src='https://drive.google.com/uc?export=view&id=1l7zAGBRa_msrJj2U66h7Xr2Bst-S0_t6' width=600>\n",
+        "<img src='https://raw.githubusercontent.com/saulocatharino/Imers-oPython/main/ML%20-%200.png' width=600>\n",
         "<br>\n",
-        "<img src='https://drive.google.com/uc?export=view&id=1pFsBUdqBQ7pK16rVRO7BRp8H_AIeCrLc' width=600>\n",
+        "<img src='https://raw.githubusercontent.com/saulocatharino/Imers-oPython/main/ML%20-%201.png' width=600>\n",
         "<br>\n",
-        "<img src='https://drive.google.com/uc?export=view&id=1q7s_jpqB3AyK8bt6qOg-AGXL4rGivMyX' width=600>\n",
+        "<img src='https://raw.githubusercontent.com/saulocatharino/Imers-oPython/main/ML%20-%202.png' width=600>\n",
         "<br>\n",
-        "<img src='https://drive.google.com/uc?export=view&id=1gHsZO0vxheuv0U7KQKvYTghcPNOhYFDM' width=600>\n",
+        "<img src='https://raw.githubusercontent.com/saulocatharino/Imers-oPython/main/ML%20-%203.png' width=600>\n",
         "<br>\n",
-        "<img src='https://drive.google.com/uc?export=view&id=1nt3g1bC0iz3nEDDB730f3zSJvjm2DWlc' width=600>\n",
+        "<img src='https://raw.githubusercontent.com/saulocatharino/Imers-oPython/main/ML%20-%204.png' width=600>\n",
         "<br>\n",
-        "<img src='https://drive.google.com/uc?export=view&id=1RPk895iBHBDUXf_uJVt7v5-VDObHZGkf' width=600>\n",
+        "<img src='hhttps://raw.githubusercontent.com/saulocatharino/Imers-oPython/main/ML%20-%206.png' width=600>\n",
         "<br>\n",
-        "<img src='https://drive.google.com/uc?export=view&id=13MvmpBwMYPhmsJ36SW8ybNHYCtPUteif' width=600>\n",
+        "<img src='https://raw.githubusercontent.com/saulocatharino/Imers-oPython/main/ML%20-%207.png' width=600>\n",
         "<br>\n",
-        "<img src='https://drive.google.com/uc?export=view&id=1n-OosOLjA00tpe5SqXZVg9lLtHkn5TuF' width=600>\n",
+        "<img src='https://raw.githubusercontent.com/saulocatharino/Imers-oPython/main/ML%20-%208.png' width=600>\n",
         "\n",
         "<br>\n",
-        "<img src='https://drive.google.com/uc?export=view&id=1NCbJwsnbHGJ0pb-YEaToayBz6IyG1rIA' width=600>"
+        "<img src='https://raw.githubusercontent.com/saulocatharino/Imers-oPython/main/ML%20-%209.png' width=600>"
       ],
       "metadata": {
         "id": "LVoDIk2OI7fC"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "gbCvQobgZpyD"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -165,7 +154,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<img src='https://drive.google.com/uc?export=view&id=1dMBHOfyZcC1t9bgeFBzdIQBIxuI4CqNF' width=600>\n"
+        "<img src='https://raw.githubusercontent.com/saulocatharino/Imers-oPython/main/ML%20-%2015.png' width=600>\n"
       ],
       "metadata": {
         "id": "ls3WuGC-Nqck"
@@ -183,8 +172,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<img src='https://drive.google.com/uc?export=view&id=1KO9VOD63eRhHJVViPu4tSLaKbiNZlf90\n",
-        "' width=1000>\n"
+        "<img src='https://raw.githubusercontent.com/saulocatharino/Imers-oPython/main/ML%20-%2016.png' width=1000>\n"
       ],
       "metadata": {
         "id": "XTP4vcidOVhw"
